Fix test page redirect URI to match Azure configuration

--- a/public/test-login.html
+++ b/public/test-login.html
@@ -23,7 +23,7 @@
             auth: {
                 clientId: '973b689d-d96c-4445-883b-739fff12330b',
                 authority: 'https://login.microsoftonline.com/aee0257d-3be3-45ae-806b-65c972c98dfb',
-                redirectUri: 'https://rdsweet1.github.io/mit-qb-frontend/test-login.html'
+                redirectUri: 'https://rdsweet1.github.io/mit-qb-frontend/'
             },
             cache: {
                 cacheLocation: 'localStorage',
